--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,5 +6,12 @@
     }
   },
   "ConnectionStrings": { "KodlamaIoDevsConnectionString": "Data source= (localdb)\\MSSQLLocalDB ;Initial Catalog= KodlamaIoDevsDb ; Integrated Security= True; " },
+  "TokenOptions": {
+    "Audience": "Mehmet Açar",
+    "Issuer": "Mehmet Açar",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "strongAndSECRETkeystrongAndSECRETkey",
+    "RefreshTokenTTL":2
+  },
   "AllowedHosts": "*"
 }
